# bzFlags

./: .gitignore  LICENSE  db.sqlite3  main.py  pyproject.toml  pytest.ini
core/: settings.py  urls.py
flags/: authentication.py  models.py  permissions.py  services.py  urls.py  views.py
flags/migrations/: 0001_initial.py
flags/tests/: test_api.py  test_api_flags.py  test_api_projects.py  test_models.py  test_services.py
flags/views/: evaluate.py  projects.py
