[project]
name = "bzflags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "model-bakery>=1.23.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]


